everything/none/ValidatingWebhookConfiguration/externalsecret-validate.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  labels:
    app.kubernetes.io/instance: external-secrets
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: external-secrets-webhook
    app.kubernetes.io/version: v2.8.0
    external-secrets.io/component: webhook
    helm.sh/chart: external-secrets-2.8.0
  name: externalsecret-validate
webhooks:
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: external-secrets-webhook
      namespace: kube-system
      path: /validate-external-secrets-io-v1-externalsecret
  failurePolicy: Fail
  name: validate.externalsecret.external-secrets.io
  rules:
  - apiGroups:
    - external-secrets.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - externalsecrets
    scope: Namespaced
  sideEffects: None
  timeoutSeconds: 5
