everything/none/ValidatingWebhookConfiguration/secretstore-validate.yaml
apiVersion: admissionregistration.k8s.io/v1
ekn:
  gitOpsTarget: everything
kind: ValidatingWebhookConfiguration
metadata:
  labels:
    app.kubernetes.io/instance: external-secrets
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: external-secrets-webhook
    app.kubernetes.io/version: v2.6.0
    external-secrets.io/component: webhook
    helm.sh/chart: external-secrets-2.6.0
  name: secretstore-validate
webhooks:
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: external-secrets-webhook
      namespace: kube-system
      path: /validate-external-secrets-io-v1-clustersecretstore
  failurePolicy: Fail
  name: validate.clustersecretstore.external-secrets.io
  rules:
  - apiGroups:
    - external-secrets.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - clustersecretstores
    scope: Cluster
  sideEffects: None
  timeoutSeconds: 5
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: external-secrets-webhook
      namespace: kube-system
      path: /validate-external-secrets-io-v1-secretstore
  failurePolicy: Fail
  name: validate.secretstore.external-secrets.io
  rules:
  - apiGroups:
    - external-secrets.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - secretstores
    scope: Namespaced
  sideEffects: None
  timeoutSeconds: 5
